gateway/1.4/modules/ROOT/pages/flex-local-reg-run-token.adoc
= Registering and Running in Local Mode with a Token
ifndef::env-site,env-github[]
include::_attributes.adoc[]
endif::[]
:imagesdir: ../assets/images
:reg-mode: Local

//table with tech logos and links (linux, docker, k8, openshift)
include::partial$task-reg-run-flex-gateway.adoc[tags=table-logos-links]

[[prereqs]]
// Prerequisites
include::partial$task-reg-run-flex-gateway.adoc[tags=prerequisites-heading;prerequisites;token-prerequisites]

[[linux]]
// Register and run with a username and password as a Linux service
include::partial$task-reg-run-flex-gateway.adoc[tags=token-linux-heading;reg-command-intro;sub-coll-info;token-replace-content;replace-content;reg-command-heading;reg-command-1;linux-reg-command;token-reg-command;organization-reg-command;output-reg-command-linux;reg-command-2;after-reg;linux-after-reg;create-config-folder-file;config-content;linux-start-commands]

[[docker]]
// Register and run with a username and password in a Docker container
include::partial$task-reg-run-flex-gateway.adoc[tags=token-docker-heading;reg-command-intro;sub-coll-info;token-replace-content;replace-content;reg-command-heading;docker-create-directory-note;reg-command-1;docker-reg-command;token-reg-command;organization-reg-command;output-reg-command-docker;reg-command-2;after-reg;after-reg-2;start-command-local-intro;start-command-local;start-command-local-valid]

// KUBERNETES 
[[kubernetes]]
// Register and run with a token in a kubernetes cluster
//heading
include::partial$task-reg-run-flex-gateway.adoc[tags=token-k8s-heading]
//intro
include::partial$task-reg-run-flex-gateway.adoc[tags=k8s-install-flex-helm-chart-intro-connected]
//- cluster-level access when rbac enabled, as for OpenShift
include::partial$prerequisites.adoc[tags=rbac-permission-k8;rbac-role-openshift]
//- links to steps
include::partial$task-reg-run-flex-gateway.adoc[tags=links-to-k8s-reg-steps]
//- local mode supplemental info for k8 and openshift
include::partial$task-reg-run-flex-gateway.adoc[tag=k8s-local-intro]

[[options-k8s]]
//sub collected info
include::partial$task-reg-run-flex-gateway.adoc[tags=sub-coll-info;token-replace-content;replace-content]

[[reg-k8s]]
//reg command
include::partial$task-reg-run-flex-gateway.adoc[tags=reg-command-heading;reg-command-1;docker-reg-command;token-reg-command;organization-reg-command;output-reg-command-docker;reg-command-2;after-reg;k8s-after-reg]

[[deploy-k8s]]
//install helm chart
//- title
include::partial$task-reg-run-flex-gateway.adoc[tags=k8s-install-flex-helm-chart-title]
//- helm chart info
include::partial$task-reg-run-flex-gateway.adoc[tags=k8s-flex-helm-chart]
include::partial$prerequisites.adoc[tags=helm] 
include::partial$task-reg-run-flex-gateway.adoc[tags=k8s-flex-helm-chart-defaults]
//- add chart repo and deploy flex via chart
include::partial$task-reg-run-flex-gateway.adoc[tags=k8s-flex-helm-chart-add;k8s-flex-helm-chart-deploy]

[[helm-options]]
//helm config options
include::partial$task-reg-run-flex-gateway.adoc[tags=helm-chart-options]


// OPENSHIFT 
[[openshift]]
// Register and run with a token in an OpenShift cluster
//heading
include::partial$task-reg-run-flex-gateway.adoc[tags=token-openshift-heading]
//intro
include::partial$task-reg-run-flex-gateway.adoc[tags=k8s-install-flex-helm-chart-intro-local]
//- cluster-level access when rbac enabled, as for OpenShift
include::partial$prerequisites.adoc[tags=rbac-permission-k8;rbac-role-openshift]
//- note (openshift command line procedures same as k8)
include::partial$task-reg-run-flex-gateway.adoc[tags=note-openshift-k8]
//- links to steps
include::partial$task-reg-run-flex-gateway.adoc[tags=links-to-openshift-reg-steps]
//- local mode supplemental info for k8 and openshift
include::partial$task-reg-run-flex-gateway.adoc[tag=k8s-local-intro]

[[options-openshift]]
//sub collected info
include::partial$task-reg-run-flex-gateway.adoc[tags=sub-coll-info;token-replace-content;replace-content]

[[reg-openshift]]
//reg command
include::partial$task-reg-run-flex-gateway.adoc[tags=reg-command-heading;reg-command-1;docker-reg-command;token-reg-command;organization-reg-command;output-reg-command-docker;reg-command-2;after-reg;k8s-after-reg]

[[deploy-openshift]]
//install helm chart
//- title
include::partial$task-reg-run-flex-gateway.adoc[tags=k8s-install-flex-helm-chart-title]
//- helm chart info
include::partial$task-reg-run-flex-gateway.adoc[tags=k8s-flex-helm-chart]
include::partial$prerequisites.adoc[tags=helm] 
include::partial$task-reg-run-flex-gateway.adoc[tags=k8s-flex-helm-chart-defaults]
//- add chart repo and deploy flex via chart
include::partial$task-reg-run-flex-gateway.adoc[tags=k8s-flex-helm-chart-add;k8s-flex-helm-chart-deploy]

[[helm-options]]
//helm config options
include::partial$task-reg-run-flex-gateway.adoc[tags=helm-chart-options]

== See Also

* xref:flex-gateway-getting-started.adoc[]
* xref:flex-conn-reg-run.adoc[]